--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <html>
-<h1> Esta es mi segunda página con GitHub Pages </h1> <p>¡Hello World!!!</p>
+<h1> Esta es mi segunda página con GitHub Pages </h1> 
+<p>¡Hello World!!!</p>
 </html>
